# foxtime

./: Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: docker-image.yml
src/: assets.rs  http.rs  index.css  index.html  index.js  main.rs  router.rs  self_signed.rs  websocket.rs  webtransport.rs  worker.js
web/: countdown.html  countdown.ts  index.css  index.html  index.ts  manifest.webmanifest  worker.ts
