[package]
name = "foxtime"
version = "0.1.0"
edition = "2024"
authors = ["binaryfox <binary@foxontheinter.net>"]
license = "MIT"

[dependencies]
actix-web = { version = "*", features = ["rustls-0_23"] }
actix-web-rust-embed-responder = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
mime = "*"
rust-embed-for-web = "*"
rustls = "*"
rustls-pemfile = "*"
