[package]
name = "foxtime"
version = "0.1.0"
edition = "2024"
default-run = "foxtime"
authors = ["binaryfox <binary@foxontheinter.net>"]
license = "MIT"

[dependencies]
salvo = { version = "*", features = ["websocket", "quinn", "rustls", "unix", "serve-static", "logging"] }
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
base64 = "*"
privdrop = "*"
nix = { version = "*", features = ["user", "fs"] }
rust-embed = "*"
rustls = { version = "*", features = ["ring"] }
rcgen = { version = "*", features = ["pem"] }
sha2 = "*"
time = "*"
bytes = "*"
# foxtime-query dependencies
reqwest = "*"
reqwest-websocket = "*"
futures-util = "*"
wtransport = "*"
